contact info gap fix

--- a/portfolio2/mediaqueries.css
+++ b/portfolio2/mediaqueries.css
@@ -69,8 +69,8 @@
     flex-wrap: wrap;
   }
   .contact-info-upper-container {
-    gap: 1rem;
-    padding: 1rem;
+    gap: 0.5rem;
+    padding: 0.85rem;
   }
   .contact-info-container {
     margin: 0;
