--- a/portfolio2/style.css
+++ b/portfolio2/style.css
@@ -253,7 +253,6 @@ section {
   border-radius: 2rem;
 }
 
-.btn-color-1,
 .btn-color-2 {
   border: rgb(53, 53, 53) 0.1rem solid;
 }
@@ -263,14 +262,19 @@ section {
   cursor: pointer;
 }
 
-.btn-color-1,
+.btn-color-1 {
+  border: rgb(0, 0, 0) 0.1rem solid;
+  background: rgb(0, 0, 0);
+  color: white;
+}
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
   color: white;
 }
 
 .btn-color-1:hover {
-  background: rgb(0, 0, 0);
+  background: rgb(53, 53, 53);
+  border: rgb(53, 53, 53) 0.1rem solid;
 }
 
 .btn-color-2 {
